Fixed Text Rendering on Safari IOS Bracket

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -35,3 +35,9 @@
     background-size: cover;
     background-attachment: fixed;
   }
+  
+  * {
+    text-rendering: optimizeLegibility; 
+    -webkit-font-smoothing: antialiased; 
+    -moz-osx-font-smoothing: grayscale;
+  }
